june portfoilo updates

--- a/index.html
+++ b/index.html
@@ -164,19 +164,29 @@
 			    <img src="assets/images/weather_alarm.png">
 			  </a>
 		  </div>
-		  <div class="element-item design" >
+		  <!-- <div class="element-item design" >
 			  <a href="portfolio/prvven_ak.pdf" target="_blank">
 			    <img src="assets/images/prvven.png">
 			  </a>
-		  </div>
+		  </div> -->
 		  <div class="element-item design" >
 			  <a href="portfolio/triplanner_1.0.pdf" target="_blank">
 			    <img src="assets/images/trplnr.png">
 			  </a>
 		  </div>
+		  <div class="element-item design" >
+			  <a href="portfolio/ak_dashboard_1.compressed.pdf" target="_blank">
+			    <img src="assets/images/dashboard_thumb.png">
+			  </a>
+		  </div>
 		  <div class="element-item website" >
 			  <a href="http://asbmt.org/" target="_blank">
 			    <img src="assets/images/asbmt.png">
+			  </a>
+		  </div>
+		  <div class="element-item website" >
+			  <a href="portfolio/vitrocsa_mockup_06_2016.compressed.pdf" target="_blank">
+			    <img src="assets/images/vitrocsa.png">
 			  </a>
 		  </div>
 <!-- 		  <div class="element-item website" >
