--- a/index.html
+++ b/index.html
@@ -209,11 +209,11 @@
 		    	<img src="assets/images/cs.png">
 		    </a>
 		  </div> -->
-		  <div class="element-item website">
+<!-- 		  <div class="element-item website">
 		    <a href="https://dearabby.sites.usa.gov/" target="_blank">
 		      <img src="assets/images/dearabby.png">
 		    </a>
-		  </div>
+		  </div> -->
 		  <div class="element-item htmlemail">
 		    <a href="portfolio/nagb_history.html" target="_blank">
 		      <img src="assets/images/nagb_history.png">
