--- a/index.html
+++ b/index.html
@@ -28,19 +28,21 @@
 	</div>
 
 <!-- Home start -->
-	<section id="home" class="pfblock-image screen-height">
-        <div ></div>
+	<section id="home" class="pfblock-image">
+        <div id="gradient">
+        	<img class="big_a" src="assets/images/bg_a_2016.png">
+        </div>
 		<div class="intro">
-			<div class="start">ANDY KIM</div>
+<!-- 			<div class="start">ANDY KIM</div>
 			<h1>Web Design</h1>
-			<div class="start">Web Design&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;Visual Design&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;Digital Design</div>
+			<div class="start">Web Design&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;Visual Design&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;Digital Design</div> -->
 		</div>
         <a href="#services">
-		<div class="scroll-down">
+<!-- 		<div class="scroll-down">
             <span>
                 <i class="fa fa-angle-down fa-2x"></i>
             </span>
-		</div>
+		</div> -->
         </a>
 	</section>
 <!-- Home end -->
@@ -75,69 +77,91 @@
 	<section id="services" class="pfblock pfblock-gray">
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-6 col-sm-offset-3">
+				<div class="col-sm-8 col-sm-offset-2 main-name">
 					<div class="pfblock-header wow fadeInUp">
-						<h2 class="pfblock-title">ANDY KIM <span>Web Design</span></h2>
+						<h2 class="pfblock-title my-name">A</h2>
+						<h2 class="pfblock-title my-name">N</h2>
+						<h2 class="pfblock-title my-name">D</h2>
+						<h2 class="pfblock-title my-name">Y</h2>
+					</div>
+					<div class="pfblock-header wow fadeInUp">
+						<h2 class="pfblock-title my-name">K</h2>
+						<h2 class="pfblock-title my-name">I</h2>
+						<h2 class="pfblock-title my-name">M</h2>
+					</div>
+					<div class="pfblock-header wow sub-text fadeInUp">
 						<div class="pfblock-line"></div>
 						<div class="pfblock-subtitle">
-							<p>I'm a designer and developer from Washington, DC. <br/>Currently a Web Designer for <a href="http://reingold.com/" target="_blank">Reingold</a>.</p>
+							<p>Designer and Front-end developer from Washington, DC. <br/>Currently a Web Designer for <a href="http://reingold.com/" target="_blank">Reingold</a>.</p>
 							<a href="portfolio/ak_resume_2016.pdf" target="_blank">Download my Resume</a>
 						</div>
 					</div>
 				</div>
+
 			</div>
-			<div class="row">
-				<div class="col-sm-3">
-					<div class="iconbox wow slideInLeft">
-						<div class="iconbox-icon">
-							<span class="icon-screen-desktop"></span>
-						</div>
-						<div class="iconbox-text">
-							<h3 class="iconbox-title">Digital Design</h3>
-							<div class="iconbox-desc">
-								Design for the digital media including HTML emails, social network designs, web banners, webpages and more. Design that is simple, modern, responsive and fast.
+			<div class="row mock-ups">
+				<div class="col-sm-10 col-sm-offset-1">
+					<a href="portfolio/do_son.png">
+						<div class="iconbox wow slideInLeft do-sun">
+							<div class="iconbox-icon">
+								<span class="icon-screen-desktop"></span>
+							</div>
+							<div class="iconbox-text">
+								<h3 class="iconbox-title">Do Sun campaign</h3>
+								<div class="iconbox-desc">
+									Personal Project<br/>
+									Single page mock-up to introduce Diptyque's Do Son fragrance.
+								</div>
 							</div>
 						</div>
-					</div>
+					</a>
 				</div>
-				<div class="col-sm-3">
-					<div class="iconbox wow slideInLeft">
-						<div class="iconbox-icon">
-							<span class="icon-puzzle"></span>
-						</div>
-						<div class="iconbox-text">
-							<h3 class="iconbox-title">Wireframe/<br/>Digital Mock-up</h3>
-							<div class="iconbox-desc">
-								From greyboxing to full color mock-up by creating and using proper style guide.
+				<div class="col-sm-10 col-sm-offset-1">
+					<a href="portfolio/aidsinfo_mockup_ak_0629_v5.2.compressed (3).pdf">
+						<div class="iconbox wow slideInLeft aidsinfo">
+							<div class="iconbox-icon">
+								<span class="icon-screen-desktop"></span>
+							</div>
+							<div class="iconbox-text">
+								<h3 class="iconbox-title">AidsInfo</h3>
+								<div class="iconbox-desc">
+									Specwork<br/>
+									Specwork mock-up for AidsInfo re-design. Very content heavy sight for both patients and doctors. 
+								</div>
 							</div>
 						</div>
-					</div>
+					</a>
 				</div>
-				<div class="col-sm-3">
-					<div class="iconbox wow slideInRight">
-						<div class="iconbox-icon">
-							<span class="icon-rocket"></span>
-						</div>
-						<div class="iconbox-text">
-							<h3 class="iconbox-title">HTML/CSS/<br/>Jquery/<br class="break"/>Javascript</h3>
-							<div class="iconbox-desc">
-								Front-end web development using the latest HTML, CSS and other frame works such as Bootstrap and Foundation.
+				<div class="col-sm-10 col-sm-offset-1">
+					<a href="portfolio/vitrocsa_mockup_06_2016.compressed.pdf">
+						<div class="iconbox wow slideInLeft vitrocsa">
+							<div class="iconbox-icon">
+								<span class="icon-screen-desktop"></span>
+							</div>
+							<div class="iconbox-text">
+								<h3 class="iconbox-title">Vitrocsa Korea</h3>
+								<div class="iconbox-desc">
+									Specwork<br/>
+									Specwork mock-up for Vitrocsa Korea website to represent the world's most luxury window products.
+								</div>
 							</div>
 						</div>
-					</div>
+					</a>
 				</div>
-				<div class="col-sm-3">
-					<div class="iconbox wow slideInRight">
-						<div class="iconbox-icon">
-							<span class="icon-picture"></span>
-						</div>
-						<div class="iconbox-text">
-							<h3 class="iconbox-title">Adobe Photshop/<br/>Illustrator/<br class="break2"/>Dreamweaver</h3>
-							<div class="iconbox-desc">
-								Adobe Creative Cloud proficiency 
+				<div class="col-sm-10 col-sm-offset-1">
+					<a href="#">
+						<div class="iconbox wow slideInLeft cafe-twelve">
+							<div class="iconbox-icon">
+								<span class="icon-screen-desktop"></span>
+							</div>
+							<div class="iconbox-text">
+								<h3 class="iconbox-title">Adobe Photshop/<br/>Illustrator/<br class="break2"/>Dreamweaver</h3>
+								<div class="iconbox-desc">
+									Adobe Creative Cloud proficiency 
+								</div>
 							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 			</div>
 		</div>
@@ -145,7 +169,7 @@
 <!-- Services end -->
 <section id="portfolio" class="pfblock">
 	<div class="container">
-		<h1>Portfolio</h1>
+		<h1>Other Works</h1>
 		<div class="button-group filters-button-group">
 		  <button class="button is-checked" data-filter="*">SHOW ALL</button>
 		  <button class="button" data-filter=".design">DESIGN</button>
@@ -184,11 +208,11 @@
 			    <img src="assets/images/asbmt.png">
 			  </a>
 		  </div>
-		  <div class="element-item website" >
+<!-- 		  <div class="element-item website" >
 			  <a href="portfolio/vitrocsa_mockup_06_2016.compressed.pdf" target="_blank">
 			    <img src="assets/images/vitrocsa.png">
 			  </a>
-		  </div>
+		  </div> -->
 <!-- 		  <div class="element-item website" >
 		    <a href="http://petstargram.herokuapp.com" target="_blank">
 		      <img src="assets/images/petstargram.png">
@@ -456,7 +480,7 @@
                         Made with <span class="fa fa-heart fa-2x animated pulse"></span> in Nottingham
                     </p> -->
                     <p class="copyright">
-                        © 2015 Andy Kim | Header image from <a href="https://unsplash.com/" target="_blank">Unsplash</a>
+                        © 2016 Andy Kim
 					</p>
 				</div>
 			</div>
