--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 								<span class="icon-screen-desktop"></span>
 							</div>
 							<div class="iconbox-text">
-								<h3 class="iconbox-title">Do Sun campaign</h3>
+								<h2 class="iconbox-title">Do Sun campaign</h2>
 								<div class="iconbox-desc">
 									Personal Project<br/>
 									Single page mock-up to introduce Diptyque's Do Son fragrance.
@@ -123,7 +123,7 @@
 								<span class="icon-screen-desktop"></span>
 							</div>
 							<div class="iconbox-text">
-								<h3 class="iconbox-title">AidsInfo</h3>
+								<h2 class="iconbox-title">AidsInfo</h2>
 								<div class="iconbox-desc">
 									Specwork<br/>
 									Specwork mock-up for AidsInfo re-design. Very content heavy sight for both patients and doctors. 
@@ -139,7 +139,7 @@
 								<span class="icon-screen-desktop"></span>
 							</div>
 							<div class="iconbox-text">
-								<h3 class="iconbox-title">Vitrocsa Korea</h3>
+								<h2 class="iconbox-title">Vitrocsa Korea</h2>
 								<div class="iconbox-desc">
 									Specwork<br/>
 									Specwork mock-up for Vitrocsa Korea website to represent the world's most luxury window products.
@@ -155,9 +155,9 @@
 								<span class="icon-screen-desktop"></span>
 							</div>
 							<div class="iconbox-text">
-								<h3 class="iconbox-title">Adobe Photshop/<br/>Illustrator/<br class="break2"/>Dreamweaver</h3>
+								<h2 class="iconbox-title">Cafe Twelve DC</h2>
 								<div class="iconbox-desc">
-									Adobe Creative Cloud proficiency 
+									Website design for gourmet deli located in Washington DC.
 								</div>
 							</div>
 						</div>
@@ -238,6 +238,11 @@
 		      <img src="assets/images/dearabby.png">
 		    </a>
 		  </div> -->
+		  <div class="element-item htmlemail">
+		    <a href="portfolio/aaa_email1.html" target="_blank">
+		      <img src="assets/images/AAA_thumb.png">
+		    </a>  
+		  </div>
 		  <div class="element-item htmlemail">
 		    <a href="portfolio/nagb_history.html" target="_blank">
 		      <img src="assets/images/nagb_history.png">
