--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 					</a>
 				</div>
 				<div class="col-sm-10 col-sm-offset-1">
-					<a href="#">
+					<a href="http://www.cafetwelvedc.com/" target="_blank">
 						<div class="iconbox wow slideInLeft cafe-twelve">
 							<div class="iconbox-icon">
 								<span class="icon-screen-desktop"></span>
