banner page added

--- a/index.html
+++ b/index.html
@@ -177,7 +177,13 @@
 		  <button class="button" data-filter=".htmlemail">HTML EMAIL</button>
 <!-- 		  <button class="button" data-filter=".events">SPECIAL EVENTS</button> -->
 		</div>
+
 		<div class="grid">
+		  <div class="element-item design" >
+		    <a href="banner.html" >
+		      <img src="assets/images/pulse_gallery.png">
+		    </a>  
+		  </div>
 		  <div class="element-item design" >
 		    <a href="portfolio/dwellwell.html" target="_blank" >
 		      <img src="assets/images/dwellwell.png">
