caption added to va banners

--- a/banner.html
+++ b/banner.html
@@ -66,432 +66,432 @@
 		<div class="item">
 			<img src="assets/banners/30k_banner.png" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">30K Celebration Banner</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>
 		<div class="item">
 			<img src="assets/banners/90anniv_socialwork.jpg" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">Social Work 90 Year anniversary</h3>
 				<div class="description">
-					<p>
+<!-- 					<p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>
 		<div class="item">
 			<img src="assets/banners/95_anniversary2.png" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">Social Work 90 Year anniversary</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>
 		<div class="item">
 			<img src="assets/banners/2016newyears2.png" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">2016 New Years</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>
 		<div class="item">
 			<img src="assets/banners/access_guidebook.jpg" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">MyVA Access Guidebook</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>		
 		<div class="item">
 			<img src="assets/banners/access_guidebook2.2.jpg" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">MyVA Access Guidebook</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>			
 		<div class="item">
 			<img src="assets/banners/access_guidebook3.2.png" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">MyVA Access Guidebook</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>	
 		<div class="item">
 			<img src="assets/banners/ache_banner.png" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">2016 ACHE Congress</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>	
 		<div class="item">
 			<img src="assets/banners/august_banner.jpg" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">VA WIN</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>	
 		<div class="item">
 			<img src="assets/banners/breast_cancer_banner_2.png" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">Breast Cancer Awareness</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>	
 		<div class="item">
 			<img src="assets/banners/earth_day.jpg" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">Earth Day</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>	
 		<div class="item">
 			<img src="assets/banners/employee_innovation.jpg" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">Employee Innovation Competition</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>	
 		<div class="item">
 			<img src="assets/banners/exercise_month.jpg" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">National Physical Fitness and Sports Month</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>	
 		<div class="item">
 			<img src="assets/banners/faitas_1029.png" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">Calling All Acquisition Professional</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>	
 		<div class="item">
 			<img src="assets/banners/fclo_banner.png" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">Calling all Logistic Officers</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>	
 		<div class="item">
 			<img src="assets/banners/gold_standard_bnr2.png" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">VHA Promising practice</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>	
 		<div class="item">
 			<img src="assets/banners/hiv_test.jpg" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">HIV Testing</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>	
 		<div class="item">
 			<img src="assets/banners/laverne_banner.png" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">Connect with VA CIO</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>	
 		<div class="item">
 			<img src="assets/banners/march2016_bnr.png" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">Women History Month</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>	
 		<div class="item">
 			<img src="assets/banners/mental_health_3.2.jpg" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">Community Health Summits</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>	
 		<div class="item">
 			<img src="assets/banners/nurse_week.jpg" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">Nurse Week</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>	
 		<div class="item">
 			<img src="assets/banners/nurseweek_banner.jpg" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">Nurse Week 2015</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>	
 		<div class="item">
 			<img src="assets/banners/osi_banner3.png" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">OSI Powering</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>	
 		<div class="item">
 			<img src="assets/banners/ptsd_banner.png" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">PTSD Awareness</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>	
 		<div class="item">
 			<img src="assets/banners/sit_stand3.jpg" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">Sit and Stand</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>	
 		<div class="item">
 			<img src="assets/banners/stroke_day.png" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">World Stroke Day</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>	
 		<div class="item">
 			<img src="assets/banners/therapeutic_banner.png" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">National Therapeutic Recreation Month</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>	
 		<div class="item">
 			<img src="assets/banners/townhall_2016_5.jpg" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">Townhall 2016</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>	
 		<div class="item">
 			<img src="assets/banners/travel_banner2.png" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">Tavel Abroad</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>	
 		<div class="item">
 			<img src="assets/banners/va_pulse_banner_july.png" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">20k User Celebration</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>	
 		<div class="item">
 			<img src="assets/banners/va_pulse_parkinson.png" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">Parkinson Awareness Month</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>	
 		<div class="item">
 			<img src="assets/banners/vapulse_hepatitis.jpg" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">Hapatitis Awareness Month</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>	
 		<div class="item">
 			<img src="assets/banners/veterans_day_banner1.1.png" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">Veterans Day 2016</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>	
 		<div class="item">
 			<img src="assets/banners/veterans_day_banner2.2.png" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">Veterans Day  2016</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>	
 		<div class="item">
 			<img src="assets/banners/virtual_tour_banner2.png" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">VA Pulse Virtual Tour</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>	
 		<div class="item">
 			<img src="assets/banners/women_veteran_banner.png" class="image">
 			<a class="overlay" href="#">
-				<h3 class="title">Some title</h3>
+				<h3 class="title">VA Knows Women Veterans</h3>
 				<div class="description">
-					<p>
+					<!-- <p>
 						Lorem ipsum dolor sit amet, <br>
 						consectetur adipisicing elit.
-					</p>
+					</p> -->
 				</div>
 			</a>
 		</div>	
