--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 					</a>
 				</div>
 				<div class="col-sm-10 col-sm-offset-1">
-					<a href="portfolio/vitrocsa_mockup_06_2016.compressed.pdf">
+					<a href="portfolio/vitrocsa_mockup_06_2016.compressed.compressed.pdf">
 						<div class="iconbox wow slideInLeft vitrocsa">
 							<div class="iconbox-icon">
 								<span class="icon-screen-desktop"></span>
