pulse bnr section added

--- a/index.html
+++ b/index.html
@@ -163,6 +163,21 @@
 						</div>
 					</a>
 				</div>
+				<div class="col-sm-10 col-sm-offset-1">
+					<a href="banner.html" target="_blank">
+						<div class="iconbox wow slideInLeft pulse_bnr">
+							<div class="iconbox-icon">
+								<span class="icon-screen-desktop"></span>
+							</div>
+							<div class="iconbox-text">
+								<h2 class="iconbox-title">VA Pulse Banner Design</h2>
+								<div class="iconbox-desc">
+									Digital banner design for Veterans Affairs Pulse member only website.
+								</div>
+							</div>
+						</div>
+					</a>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -179,11 +194,7 @@
 		</div>
 
 		<div class="grid">
-		  <div class="element-item design" >
-		    <a href="banner.html" >
-		      <img src="assets/images/pulse_gallery.png">
-		    </a>  
-		  </div>
+
 		  <div class="element-item design" >
 		    <a href="portfolio/dwellwell.html" target="_blank" >
 		      <img src="assets/images/dwellwell.png">
