--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="col-sm-10 col-sm-offset-1">
+				<!-- <div class="col-sm-10 col-sm-offset-1">
 					<a href="http://www.cafetwelvedc.com/" target="_blank">
 						<div class="iconbox wow slideInLeft cafe-twelve">
 							<div class="iconbox-icon">
@@ -162,7 +162,7 @@
 							</div>
 						</div>
 					</a>
-				</div>
+				</div> -->
 				<div class="col-sm-10 col-sm-offset-1">
 					<a href="banner.html" target="_blank">
 						<div class="iconbox wow slideInLeft pulse_bnr">
