--- a/works.html
+++ b/works.html
@@ -144,9 +144,13 @@
 					<div class="col-lg-8 no-float">
 						<div class="work-section">
 							<img src="assets/images/nadbc_desktop.jpg">
-								<p class="work-desc">The Aging and Disability Business Institute (Business Institute) is led by The National Association of Area Agencies on Aging (n4a) in partnership with the most experienced and respected organizations in the aging and disability networks. Together, these organizations provide community-based organizations (CBOs) with the tools and resources to successfully adapt to a changing health care environment,  enhance their organizational capacity and capitalize on emerging opportunities to diversify funding.  Serving as the national focal point to build the business acumen of CBOs, the Business Institute focuses on building skills and knowledge across  business disciplines, while looking ahead to the future of aging and disability services. <a href="http://www.aginganddisabilitybusinessinstitute.org/" target="_blank">Go to site.</a></p>
+								<p class="work-desc">The Aging and Disability Business Institute (Business Institute) is led by The National Association of Area Agencies on Aging (n4a) in partnership with the most experienced and respected organizations in the aging and disability networks. Together, these organizations provide community-based organizations (CBOs) with the tools and resources to successfully adapt to a changing health care environment,  enhance their organizational capacity and capitalize on emerging opportunities to diversify funding.  Serving as the national focal point to build the business acumen of CBOs, the Business Institute focuses on building skills and knowledge across  business disciplines, while looking ahead to the future of aging and disability services.<br>
+								 <a href="http://www.aginganddisabilitybusinessinstitute.org/" target="_blank">Go to site.</a></p>
 								<p class="company"><strong>Client:</strong> The National Association of Area Agencies on Aging (n4a)</p>
 								<p class="role"><strong>Role:</strong> Web Design & Front-end Development</p>
+								<p class="dl-btn">
+								<a href="assets/images/nadbc_2017.pdf" target="_blank">View UPDATED PDF version</a>
+								</p>
 							<img src="assets/images/nadbc_laptop.jpg">
 							<img src="assets/images/nadbc_mobile.jpg">
 							<img src="assets/images/nadbc_styleguide.jpg">
@@ -168,9 +172,14 @@
 					<div class="col-lg-8 no-float">
 						<div class="work-section">
 							<img src="assets/images/asbmt_desktop.jpg">
-								<p class="work-desc">The American Society for Blood and Marrow Transplantation is an international professional membership association of more than 2,200 physicians, investigators and other health care professionals from more than 45 countries. Our association has been instrumental in numerous advancements in blood and marrow transplantation, as well as the development of stem cell transplantation regulations and standards. In 1996, with the International Society for Cellular Therapy, we co-founded the Foundation for the Accreditation of Cellular Therapy, an accreditation program for BMT centers.<a href="http://asbmt.org/" target="_blank">Go to site.</a></p>
+								<p class="work-desc">The American Society for Blood and Marrow Transplantation is an international professional membership association of more than 2,200 physicians, investigators and other health care professionals from more than 45 countries. Our association has been instrumental in numerous advancements in blood and marrow transplantation, as well as the development of stem cell transplantation regulations and standards. In 1996, with the International Society for Cellular Therapy, we co-founded the Foundation for the Accreditation of Cellular Therapy, an accreditation program for BMT centers.<br>
+								<a href="http://asbmt.org/" target="_blank">Go to site.</a></p>
+								
 								<p class="company"><strong>Client:</strong> The American Society for Blood and Marrow Transplantation (ASBMT)</p>
 								<p class="role"><strong>Role:</strong> Web Design & Front-end Development</p>
+								<p class="dl-btn">
+								<a href="assets/images/asbmt_mockup_ak_2017_v2.pdf" target="_blank">View UPDATED PDF version</a>
+								</p>
 							<img src="assets/images/asbmt_tablet.jpg">
 							<img src="assets/images/asbmt_mobile.jpg">
 							<img src="assets/images/asbmt_styleguide.jpg">
