--- a/works.html
+++ b/works.html
@@ -129,6 +129,15 @@
 		                </picture>
 		            </a>
 		        </li>
+		        <li class="pause">
+		            <a href="#" class="works-walarm">
+		                <h2 class="h__module">VITROCSA</h2>
+		                <div class="overlay" style="background-color: black"></div>
+		                <picture>
+		                    <img src="assets/images/works-walarm.png" alt="" />
+		                </picture>
+		            </a>
+		        </li>
 			</ul>
 		</div>
 	</div>
@@ -202,7 +211,7 @@
 								<p class="company"><strong>Client:</strong> Reporting for Suicide</p>
 								<p class="role"><strong>Role:</strong>Front-end Development</p>
 							<img src="assets/images/ros_laptop.jpg">
-							<img src="assets/images/ros_mobile.jpg">
+							<img src="assets/images/ros_mobile.jpg" class="mock-layout">
 						</div>
 
 				    </div>
@@ -226,7 +235,7 @@
 								<p class="work-desc">Vitrocsa of Switzerland - The Inventor of the world's slimmest sight lines<br/>With 18mm slim profiles (3/4”), the patented Vitrocsa Invisible Wall system features the world’s slimmest sight lines on its sliding walls. Proven and tested since 1993, with over 30,000 Vitrocsa units over 1 million sqf of glazing installed in over 30 countries-without a single failure.</p>
 								<p class="company"><strong>Client:</strong> Mibaek Window Ltd</p>
 								<p class="role"><strong>Role:</strong> Web Design Spec</p>
-							<img src="assets/images/vit_pg2.jpg">
+							<img src="assets/images/vit_pg2.jpg" class="mock-layout">
 						</div>
 
 				    </div>
@@ -237,6 +246,30 @@
   		</div>
 	</div>
 </div>
+
+
+<div class="container-fluid work-walarm-overlay">
+	<div class="work-overlay-wrap">
+		<a href="#" class="go-back">Close</a>
+		<div class="container-fluid">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-8 no-float">
+						<div class="work-section">
+							
+								<p class="work-desc">Simple Whatever + Alarm app that helps you prepare for your day by giving you information on weather, reminder, news, tasks, scores or your own custom message you set with your alarm.</p>
+								<p class="company"><strong>Client:</strong> Personal Project</p>
+								<p class="role"><strong>Role:</strong> Product Design</p>
+							<img src="assets/images/walarm_layout.png" class="mock-layout">
+						</div>
+
+				    </div>
+			    </div>
+			</div>
+  		</div>
+	</div>
+</div>
+
 
 <div class="container-fluid work-pulse-overlay">
 	<div class="work-overlay-wrap">
@@ -314,6 +347,10 @@
   		</div>
 	</div>
 </div>
+
+
+
+
 <!-- <div class="container">
 	<div class="row">
 		<div class="col-lg-6">
