resume dl added

--- a/about.html
+++ b/about.html
@@ -83,7 +83,8 @@
 			<div class="about-section">
 					<p class="about-main">Web & Digital designer from Washington DC area. I work for a digital consulting agency with clients mostly in US Federal government, Healthcare and Education.<</p>
 					<p class="skills"><strong>Skills:</strong><br/> <span style="color:#3495e2">Responsive web design,</span><span style="color: #8c16fc"> wireframe,</span><span style="color: #eb16da"> digital mock-up,</span><span style="color: #a77a97"> visual design,</span><span style="color: #50d56d"> photoshop,</span><span style="color: #9b73b9"> illustrator,</span><span style="color: #e122eb"> sketch,</span><span style="color: #3eb1bf "> html,</span><span style="color: #a416fb"> css,</span><span style="color: #4238ec"> sass,</span><span style="color: #8a4be2"> jQuery,</span><span style="color: #b87354"> git</span>...</p>
-					<p class="other"><strong>Other Interests:</strong><br/> music production, ableton, bass guitar, fashion and travel...></p>
+					<p class="other"><strong>Other Interests:</strong><br/> music production, ableton, bass guitar, fashion and travel...</p>
+					<p class="other"><a href="ak_resume_.pdf">Download Resume..></a></p>
 				<img src="assets/images/andy-hero_2017.jpg">
 			</div>
 		</div>
