walarm logo design

--- a/works.html
+++ b/works.html
@@ -259,7 +259,7 @@
 							
 								<p class="work-desc">Simple Whatever + Alarm app that helps you prepare for your day by giving you information on weather, reminder, news, tasks, scores or your own custom message you set with your alarm.</p>
 								<p class="company"><strong>Client:</strong> Personal Project</p>
-								<p class="role"><strong>Role:</strong> Product Design</p>
+								<p class="role"><strong>Role:</strong> Product Design, Logo Design</p>
 							<img src="assets/images/walarm_layout.png" class="mock-layout">
 						</div>
 
