--- a/works.html
+++ b/works.html
@@ -20,6 +20,13 @@
     <script src="assets/js/modernizr.custom.js"></script>
     <script src="assets/js/modal.js"></script>
    	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery.isotope/2.2.0/isotope.pkgd.js"></script>
+
+
+   	<!-- fotorama.css & fotorama.js. -->
+<link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet"> <!-- 3 KB -->
+<script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> <!-- 16 KB -->
+
+
        
 </head>
 
@@ -131,10 +138,19 @@
 		        </li>
 		        <li class="pause">
 		            <a href="#" class="works-walarm">
-		                <h2 class="h__module">VITROCSA</h2>
+		                <h2 class="h__module">WALARM</h2>
 		                <div class="overlay" style="background-color: black"></div>
 		                <picture>
 		                    <img src="assets/images/works-walarm.png" alt="" />
+		                </picture>
+		            </a>
+		        </li>
+		         <li class="pause">
+		            <a href="#" class="works-htmle">
+		                <h2 class="h__module">HTML EMAILS</h2>
+		                <div class="overlay" style="background-color: black"></div>
+		                <picture>
+		                    <img src="assets/images/works-html.png" alt="" />
 		                </picture>
 		            </a>
 		        </li>
@@ -259,7 +275,7 @@
 							
 								<p class="work-desc">Simple Whatever + Alarm app that helps you prepare for your day by giving you information on weather, reminder, news, tasks, scores or your own custom message you set with your alarm.</p>
 								<p class="company"><strong>Client:</strong> Personal Project</p>
-								<p class="role"><strong>Role:</strong> Product Design, Logo Design</p>
+								<p class="role"><strong>Role:</strong> Product Design</p>
 							<img src="assets/images/walarm_layout.png" class="mock-layout">
 						</div>
 
@@ -269,7 +285,28 @@
   		</div>
 	</div>
 </div>
-
+<div class="container-fluid work-htmle-overlay">
+	<div class="work-overlay-wrap">
+		<a href="#" class="go-back">Close</a>
+		<div class="container-fluid">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-10 no-float">
+						<div class="work-section-htmle">
+						<p class="work-desc-htmle">Here I have picked out some of the HTML emails I have designer and coded in the past.</p>
+							<div class="fotorama">
+							  <img src="assets/images/htmle-aaa.png">
+							  <img src="assets/images/htmle-aasld.png">
+							  <img src="assets/images/htmle-nagb_2017_1.png">
+							  <img src="assets/images/htmle-nagb_2017_2.png">
+							</div>
+						</div>
+				    </div>
+			    </div>
+			</div>
+  		</div>
+	</div>
+</div>
 
 <div class="container-fluid work-pulse-overlay">
 	<div class="work-overlay-wrap">
